--- a/public/techni.html
+++ b/public/techni.html
@@ -87,10 +87,7 @@
             <img id="res" />
           </div>
           <div style="margin: 1em 0 1em 0">
-            <button id="download_btn" class="MxmButton" hidden>
-              <a id="download_anchor" download="Twibbon_MAXIMA2020.png"
-                >Unduh!</a
-              >
+            <button id="download_btn" class="MxmButton" hidden>Unduh!
             </button>
           </div>
         </div>
@@ -186,9 +183,12 @@
                     document
                       .getElementById("download_btn")
                       .removeAttribute("hidden");
-                    document
-                      .getElementById("download_anchor")
-                      .setAttribute("href", save_img);
+                    $("#download_btn").click(() => {
+                      const anchor = document.createElement('a');
+                      anchor.href = save_img;
+                      anchor.download = 'Twibbon_MAXIMA2020';
+                      anchor.click();
+                    })
                   };
                 });
                 $("#btnRestore").click(function () {
